# Cmake_rt-thread-nano

./: CMakeLists.txt  README.md
finsh/inc/: finsh_config.h
finsh/src/: shell.c
rt-thread/inc/: board.h  rtconfig.h
rt-thread/src/: board.c  components.c  scheduler.c
